Revision history for Perl extension AnyEvent.

	- load AnyEvent::Handle only on demand in AnyEvent::DNS,
          so AnyEvent::Socket users have smaller memory footprint
          in the common case.

4.45  Mon Jun 29 22:59:26 CEST 2009
        - a write error could cause AnyEvent::Handle to create
          an I/O watcher with an undefined $fh.
        - special-case mapped ipv4 addresses in both
          AnyEvent::Socket::format_address and parse_address,
          to treat them just like ipv4 addresses.
        - updated and overhauled the AnyEvent::Intro doc.
        - implement AnyEvent::Socket::format_ipv4/ipv6.
	- slightly speed up portable_pipe/socketpair.
        - expand condvar begin/end documentation.

4.42  Fri Jun 26 08:32:18 CEST 2009
	- preliminary and neccesarily incomplete support for IO::Async.
	- reset SIGCHLD to DEFAULT when AnyEvent is loaded, in
          case it was set to IGNORE, to ensure we can catch child statuses
          even when the calling env acts stupidly.
        - updated benchmarks with IO::Async, which performs very well.

4.412 Wed Jun 24 01:35:57 CEST 2009
	- support an "untaint" attribute for AnyEvent::DNS
          and set it on the default resolver.
	- implement and document AnyEvent::Impl::Perl::loop.
        - remove all anyevent-env variables from %ENV
          when running in tainted mode.
        - mention and extend the IO::Lambda benchmark.

4.411 Sun Jun  7 18:48:02 CEST 2009
	- do not try to use F_SETFD on windows.

4.41  Thu May 14 06:40:11 CEST 2009
        - work around issues in older perls (5.8.0?) when
          a signal handler is deleted from the %SIG hash.
        - use POSIX::_exit in child test, to avoid running
          destructors.
        - speed up CHLD handling by relying on SIGCHLD being
          synchronously delivered, even when we roll our own
          implementation.
	- AnyEvent::DNS: add the "dname" resource record name
          for cosmetic reasons.
