@@ -3,6 +3,9 @@ Revision history for Perl extension AnyEvent.
 	- load AnyEvent::Handle only on demand in AnyEvent::DNS,
           so AnyEvent::Socket users have smaller memory footprint
           in the common case.
+        - make AnyEvent::Handle more robust against early conenction
+          failures (during new), and return C<undef> in that case
+          from the constructor.
 
 4.45  Mon Jun 29 22:59:26 CEST 2009
         - a write error could cause AnyEvent::Handle to create
